test/typechecker.d/valid/data.surc
def enum Boots = { troot fabs }

t: Boots = troot
f: Boots = fabs
