test/typechecker.d/invalid/typedef-enum-2.surc
def enum Number = { one one }
